<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>
        <variable
                name="shortenUrlViewModel"
                type="com.junhee.danchooke.viewmodel.ShortenUrlViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.ShortenUrlActivity">

        <LinearLayout
                android:id="@+id/layout_btns"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/btn_copy_to_clipboard"
                android:padding="5dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
                android:layout_marginTop="24dp">

            <Button
                    android:text="@string/btn_del"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:background="@color/colorGray"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textSize="17sp"
                    android:onClick="@{() -> shortenUrlViewModel.clickDelete()}"
                    android:visibility="@{safeUnbox(shortenUrlViewModel.showResult) ? View.VISIBLE : View.GONE}"
                    android:id="@+id/btn_del" android:layout_marginRight="2.5dp"/>

            <Button
                    android:padding="5dp"
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="16dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:paddingBottom="16dp"
                    android:text="@string/convert"
                    android:textSize="17sp"
                    android:onClick="@{() -> shortenUrlViewModel.clickConvert()}"
                    tools:layout_editor_absoluteX="0dp" tools:layout_editor_absoluteY="398dp"
                    android:layout_marginLeft="2.5dp"/>
        </LinearLayout>
        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/urlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_url"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:met_autoValidate="true"
                app:met_floatingLabel="normal" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <TextView
                android:id="@+id/result_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/converted_url"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/urlEditText" android:textStyle="bold"
                android:textColor="@color/colorBold"/>

        <TextView
                android:id="@+id/result_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="16dp"
                android:text="@{shortenUrlViewModel.shortenUrl}"
                android:textColor="#444"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="googl.gl/xTdnbG" android:linksClickable="true"
                app:layout_constraintTop_toBottomOf="@+id/result_label"
                android:textColorLink="@color/design_default_color_primary" android:autoLink="web"/>

        <ImageButton
                android:id="@+id/btn_copy_to_clipboard"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_file_copy_24px"
                android:onClick="@{() -> shortenUrlViewModel.clickCopyToClipboard()}"
                app:layout_constraintStart_toEndOf="@+id/result_url"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/result_url"
                app:layout_constraintBottom_toBottomOf="@+id/result_url"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/visibility_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{safeUnbox(shortenUrlViewModel.showResult)? View.VISIBLE : View.GONE}"
                app:constraint_referenced_ids="btn_copy_to_clipboard,result_label,result_url"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="parent" app:layout_constraintBottom_toTopOf="parent"/>

        <TextView
                android:text="@string/url_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="36dp" android:layout_marginStart="16dp" android:textSize="24sp"
                android:textStyle="bold" android:textColor="@color/colorBold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>